feat: add network mapping
